--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "predis/predis": "^2.0",
         "spatie/laravel-medialibrary": "^10.0.0",
         "tymon/jwt-auth": "^1.0"
     },
